--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Página de Blog</h1>
     <h2>Post número 1</h2>
+    <h2>Post número 2</h2>
     <a href="index.html">Voltar para página inicial</a>
 </body>
 </html>
