Deletado blog, update index

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página home</h1>
+    <h1>Página inicial</h1>
     <a href="vendas.html">Ir para página de vendas</a>
+    <a href="blog.html">Ir para página de blog</a>
+    <a href="sobre.html">Ir para página de sobre</a>
 </body>
 </html>
