--- a/sobre.html
+++ b/sobre.html
@@ -2,6 +2,8 @@
 <html>
 <body>
     <h1>Página de Sobre</h1>
+    <h2>História</h2>
+    <h2>Endereço</h2>
     <a href="index.html">Voltar para página inicial</a>
 </body>
 </html>
