--- a/vendas.html
+++ b/vendas.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Página de vendas</h1>
     <p>Vendas = R$ 5000.00</p>
+    teste de preenchimento
     <a href="index.html">Voltar para página inicial</a>
 </body>
 </html>
