--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
     <h2>Noticia 1</h2>
     <p>MAteria sobre a noticia 1</p>
     <h2>Noticia 2</h2>
-    <p>MAteria sobre a noticia 2</p>
+    <p>MAteria sobre a noticia sssss2</p>
     <a href="index.html">Voltar para página inicial</a>
 </body>
 </html>
