--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página inicial</h1>
+    <h1>Página inicial revisada</h1>
     <a href="vendas.html">Ir para página de vendas</a>
     <a href="blog.html">Ir para página de blog</a>
     <a href="sobre.html">Ir para página de sobre</a>
