nova linha no sobre

--- a/sobre.html
+++ b/sobre.html
@@ -4,6 +4,7 @@
     <h1>Página de Sobre</h1>
     <h2>História</h2>
     <h2>Endereço</h2>
+    <h3>nova linha</h3>
     <a href="index.html">Voltar para página inicial</a>
 </body>
 </html>
