--- a/vendas.html
+++ b/vendas.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Página de vendas</h1>
     <p>Vendas = R$ 5000.00</p>
-    teste de preenchimento
+    <p>teste de preenchimento</p>
+    <p>Venda 2 = R$ 10000.00</p>
     <a href="index.html">Voltar para página inicial</a>
 </body>
 </html>
