--- a/vendas.html
+++ b/vendas.html
@@ -10,6 +10,7 @@
     <p>Vendas = R$ 5000.00</p>
     <p>teste de preenchimento</p>
     <p>Venda 2 = R$ 10000.00</p>
+    <p>dia de folga</p>
     <a href="index.html">Voltar para página inicial</a>
 </body>
 </html>
